updates to address layout issues (including images) on mobile devices.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -91,4 +91,5 @@ footer {
 
 img {
     max-width: 100%;
+    height: auto;
 }
